# retail-ai-platform

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install-startup-task.ps1  start-retail-ai.bat
api/: .env.example  .gitkeep  CHANGELOG.md  README.md  pyproject.toml
api/app/: config.py  main.py
api/app/api/: router.py
api/app/audit/: persister.py
api/app/auth/: dependencies.py  jwt_handler.py  service_auth.py
api/app/db/: connection.py  conversation.py  feedback.py  queries.py  tenant_config.py
api/app/evaluation/: catalog.py  cli.py  comparator.py  metrics.py  report.py  runner.py
api/app/llm/: claude_client.py  orchestrator.py  tool_dispatcher.py
api/app/security/: rate_limiter.py  sanitizer.py
api/app/tools/: __init__.py  alerts.py  audit.py  brand.py  briefings.py  cli.py  compare.py  composite.py  executive.py  monthly.py  recommendations.py  schemas.py  sku.py  store.py  velocity.py
api/scripts/: setup_audit_schema.sql
api/tests/: conftest.py  test_chat_endpoint.py  test_health.py  test_service_auth.py
api/tests/test_api/: test_internal_config.py  test_internal_conversations.py  test_internal_metrics.py  test_internal_suggestions.py
api/tests/test_audit/: test_persister.py
api/tests/test_db/: test_conversation_memory.py
api/tests/test_evaluation/: test_eval_framework.py
api/tests/test_llm/: test_dispatcher.py  test_orchestrator.py  test_prompts.py
api/tests/test_security/: test_jwt.py  test_rate_limiter.py  test_sanitizer.py
api/tests/test_tools/: test_alerts.py  test_audit.py  test_brand.py  test_briefings.py  test_compare.py  (+7 more)
(+42 files in other folders)
