[project]
name = "retail-ai-api"
version = "0.1.0"
description = "Retail AI Platform - FastAPI backend exposing Gold data warehouse as Claude tools (multi-tenant)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Yunior" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pyodbc>=5.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "anthropic>=0.40",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
